[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"]}
chrono = "0.4"
bson = { version = "2", features = ["chrono-0_4"] }
dotenv = "0.15.0"
mongodb = "3.1.0"
tower-http = {version = "0.6.1", features = ["cors"]}